<resources>
    <string name="app_name">InClass09</string>
    <string name="GPA">GPA</string>
    <string name="grade">Grades</string>
    <string name="hours">Hours</string>
    <string name="courses">Courses</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="courseGrade">Course Grade</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="addCourse">Add Course</string>


    <string name="add">Add Course</string>
    <string name="courseNumber">Course Number</string>
    <string name="courseName">Course Name</string>
    <string name="creditHours">Credit Hours</string>

    <string name="toast_input">Please enter all of the required inputs</string>
    <string name="toast_credit">Please enter a valid number for your credits</string>
    <string name="toast_grade">Please check a grade</string>


</resources>